--- a/estilo.css
+++ b/estilo.css
@@ -7,6 +7,15 @@
             box-sizing: border-box;
             font-family: 'Poppins';
         }
+        .cartas :hover{
+            background-color:#e7e7e7
+        }
+        .volver{
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 15%;
+          
+        }
         
         .logoamarillo{
           margin-left: 130px; 
@@ -15,12 +24,13 @@
             display: none;
         }
         .color2 a{
-            background-color: #1c3692;
+            background-color:#1c3692;
             color:#ffffff;
         }
         .color2 a:hover{
-            background-color: #1c3692;
-          color:#e4e4e4;
+            background-color: #0b1b54;
+            color:#e4e4e4;
+            font-weight: 700;
         }
         html {
             scroll-behavior: smooth;
@@ -38,6 +48,7 @@
      
         .redes1 {
             color: #000000;
+            
         }
         .redes1 :hover {
             color:#1c3692;
@@ -125,6 +136,7 @@
             margin-left: 10px;
             transition: .5s;
             font-weight: 1000;
+            
             
         }
         
@@ -603,7 +615,9 @@
     
         #contacto  {
             padding: 70px 15px;
-           
+            text-align: center;
+            background-color: #ffffff;
+            margin: auto;
             
              }
             
@@ -716,7 +730,33 @@
             text-decoration: underline;
             color: #1c3692;
         }
-       
+        .carousel-container {
+            
+            overflow: hidden;
+            width: 100%;
+        }
+        
+        .carousel {
+            padding: 60px 15px;
+            display: flex;
+            transition: transform 0.2s ease-in-out;
+        }
+        
+        .carousel img {
+            width: 120px; /* Ajusta el tamaño según tus necesidades */
+            margin: 0 50px; /* Espacio entre las imágenes */
+        }
+        /*#fondo{
+            
+            background: url("./imagenes/fondo.png");
+            background-size: cover;
+             margin-top: 15px;
+            background-position:center;
+            height:80vh;
+        }
+        .fondo2{
+            display: none;
+        }*/
         /* *********************/
         /* seccion F O O T E R */
         /* *********************/
@@ -790,14 +830,7 @@
     filter: contrast(120%);
 
 }
-#contacto {
-    padding: 10px 5px;
-    max-width: 90%;
-    margin-top: 10px;
-   
 
-
-}
 
 .portada{
      
@@ -1064,7 +1097,11 @@
                 padding: 20px;
                 background-color:#1c3692d7;
             }
-          
+            .carousel img {
+                width: 80px; /* Ajusta el tamaño para pantallas más pequeñas */
+                margin: 0 15px;
+            }
+            
  }
          
         
