--- a/estilo.css
+++ b/estilo.css
@@ -738,7 +738,7 @@
            padding-left: 100px;
         }
         .doslogos{
-            margin-bottom: 100px;
+            margin-bottom: 40px;
         }
         .subrayado{
             text-decoration: underline;
@@ -1127,7 +1127,10 @@
                text-align: center;
             }
             .doslogos{
-                margin-bottom: 30px;
+                margin-bottom: 3
+                
+                
+                0px;
                 text-align: center;
                 
             }
