--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-        * {
+        *{
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -23,7 +23,8 @@
           margin-left: 130px; 
         }
         .logotran{
-            display: none;
+            margin-top: -120px;
+            
         }
         .color2 a{
             background-color:#1c3692;
@@ -41,7 +42,7 @@
         /* seccion I N I C I O */
         /* *********************/
         .hambuerguesa{
-            color:#1c3692;
+            color: green;
             width: 30px;
             
         }
@@ -81,11 +82,11 @@
     
          } 
          #inicio {
-            background: url("./imagenes/baner7.png");
+            background:linear-gradient( #096218b8 ,#feffff8f, #33643477,#ffffff00, #ffffff00,#33643492 ), url("./imagenes/arbol3.jpg");
             background-size: cover;
              margin-top: 15px;
             background-position:center;
-            height:103vh;
+            height:99vh;
             
 
         }   
@@ -119,40 +120,41 @@
             text-decoration: none;
             color: rgb(0, 0, 0);
             margin: 0 12px;
-            font-weight: 500;
+            font-weight: 700;
             transition: .5s;
+            font-size: 18px;
 
         }
         
         #inicio .contenido header .contenido-header nav ul li a:hover {
             color:#1c3692;
-            font-weight: 800;
+            font-weight: 900;
         
             
         }
         
         #inicio .contenido header .contenido-header .redes a {
             text-decoration: none;
-            font-size: 16px;
-            color:#ffffff;
+            font-size: 20px;
+            color:green;
             display: inline-block;
             margin-left: 10px;
             transition: .5s;
             font-weight: 500;
-            padding: 5px;
-            background-color: #1c3692bb;
+            padding: 1px;
+           
             
             
         }
         
         #inicio .contenido header .contenido-header .redes a:hover {
-            color:#ffffff;
+            color: green;
             font-weight: 600;
             transform: scale(1.1, 1.1);
         }
         
         #inicio .contenido header .contenido-header .seleccionado {
-            color:#db2427;
+            color: green;
         }
         
         #inicio .contenido .presentacion {
@@ -166,7 +168,6 @@
     
         }
        
-        
         
         #inicio .contenido .presentacion .ayuda1 h3 {
             display: none;
@@ -188,24 +189,9 @@
             text-align: center;
         }
         
-        #inicio .contenido .presentacion a {
-            text-decoration: none;
-            display: inline-block;
-            margin: 25px;
-            padding: 20px 25px;
-            border: 2px solid #fff;
-            border-radius: 50px;
-            color: #000000;
-            font-weight: bold;
-            text-transform: uppercase;
-            transition: .5s;
-        }
         
-        #inicio .contenido .presentacion a:hover {
-            background-color:#ffc107;
-            transform: scale(1.2, 1.2);
-            
-        }
+        
+      
         
         #icono-nav {
             color: #fff;
@@ -318,7 +304,7 @@
             font-size: 28px;
             font-weight: 800;
             text-transform: uppercase;
-            color: #1c3692;
+            color: rgb(17, 124, 17);
             text-decoration: underline;
             text-decoration-color:#c1c1c1;
             text-decoration-thickness: 5px;
@@ -385,7 +371,7 @@
 
        
         #whatsapp-button a img {
-            width: 55px; /* Ajusta el tamaño según tu preferencia */
+            width: 70px; /* Ajusta el tamaño según tu preferencia */
             border-radius: 40%;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
             background-color: #10f63a; /* Color de WhatsApp */
@@ -394,14 +380,14 @@
         }
         
         #whatsapp-button a img:hover {
-            background-color:#1c3692;/* Cambia el color al pasar el mouse */
+            background-color:#1c9245;/* Cambia el color al pasar el mouse */
             opacity: 1;
             
         }
         
 
         .contador-obras {
-            background: linear-gradient(#1c3692, #0000008a,#ef0d0d7b,#0000008a, #1c3692), url("./imagenes/portada.jpg");
+            background: linear-gradient(#1c3692, #0000008a,#ef0d0d7b,#0000008a, #1c3692), url("./imagenes/arborista2.jpg");
             background-size: cover;
             background-position:center;
             height:35vh;
@@ -446,8 +432,9 @@
             color: #575656;
           }
         .color1 {
-            font-family: Georgia, "Times New Roman", Times, serif;
-            color:#ffc107;
+            font-size: 800;
+            color:#ffffff;
+            
           }
         .parrafo {
             color: #575656;
@@ -458,7 +445,7 @@
             font-weight: 500;
           }
         .contenedor-skills {
-            background: linear-gradient(#000000d3,#1c3692dd,#00000000,#1c369292,#000000d3 ), url("./imagenes/autoelevador0.jpg");
+            background: linear-gradient(#000000d3,#2d6236dd,#00000000,#33643492,#000000d3 ), url("./imagenes/arborista2.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             color: #fff;
@@ -541,7 +528,7 @@
             font-size: 28px;
             font-weight: 800;
             text-transform: uppercase;
-            color: #1c3692;
+            color: green;
             text-decoration: underline;
             text-decoration-color:#c1c1c1;
             text-decoration-thickness: 5px;
@@ -619,7 +606,7 @@
 
     
         #contacto  {
-            padding: 70px 15px;
+            padding: 0px 5px;
             text-align: center;
             background-color: #ffffff;
             margin: auto;
@@ -672,7 +659,7 @@
         font-size: 28px;
         font-weight: 800;
         text-transform: uppercase;
-        color: #1c3692;
+        color: green;
         text-decoration: underline;
         text-decoration-color:#c1c1c1;
         text-decoration-thickness: 5px;
@@ -684,11 +671,11 @@
     cursor: pointer;
     transition: .5s;
     padding: 10px 15px !important;
-    background-color:#1c3692;
+    background-color:green;
     color: #ffffff;
     }
     #contacto .btn-enviar:hover{
-    background-color:#1c3692;
+    background-color: green;
     color:#000000;  
     font-weight: 700;
     }   
@@ -752,14 +739,14 @@
         }
         
         .carousel {
-            padding: 70px 15px;
+            padding: 20px 15px;
             display: flex;
             transition: transform 0.2s ease-in-out;
         }
         
         .carousel img {
-            width: 100px; /* Ajusta el tamaño según tus necesidades */
-            margin: 0 50px; /* Espacio entre las imágenes */
+            width: 230px; /* Ajusta el tamaño según tus necesidades */
+            margin: 0 10px; /* Espacio entre las imágenes */
         }
     
         /*#fondo{
@@ -778,7 +765,7 @@
         /* *********************/
         
         footer {
-           background-color:#1c3692;
+           background-color: green;
             color: #ffffff;
             text-align: center;
             padding: 7px 0;
@@ -861,7 +848,7 @@
 
 }
 .telefonos{
-    color: #1c3692;
+    color: green;
 }
 
         /* *********************/
@@ -935,7 +922,7 @@
         }
      
             .logo{
-                width: 30px;
+                width: 80px;
                 margin-left: 15px;
             }
             .linea{
@@ -990,7 +977,7 @@
                     display: block;
                 }
                 #inicio{
-                    background: url("./imagenes/2.png");
+                    background: url("./imagenes/arbol3.jpg");
                     background-size: cover;
                      margin-top: 15px;
                     background-position:center;
@@ -1058,6 +1045,7 @@
                 /* seccion CONTACTO */
                 #contacto {
                     padding: 50px 0px;
+                    margin-top: -100px;
                 }
                 #contacto .contenedor-form .mitad {
                     margin-bottom: 15px;
@@ -1110,11 +1098,12 @@
                 background-color:#1c3692d7;
             }
             .carousel img {
-                width: 70px; /* Ajusta el tamaño para pantallas más pequeñas */
+                width: 150px; /* Ajusta el tamaño para pantallas más pequeñas */
                 margin: 0 15px;
             }
             .carousel {
-                padding: 40px 15px;
+              
+                
                 display: flex;
                 transition: transform 0.2s ease-in-out;
             }
@@ -1139,6 +1128,7 @@
             .gracias{
                 display: inline;
                 text-align: center;
+                
             }
             .footer1{
                 margin-top: 0px;
@@ -1146,7 +1136,7 @@
             .logoamarillo{
                 margin-bottom: 0px;
                 margin-left: 0px; 
-                width: 75px;
+                width: 105px;
             }
  }
          
